# AnimeML

./: MoveLibToUnity.ps1  README.md
Data/CSV/: winequality-predict.csv  winequality-train.csv
cpp/: .clang-format  .gitignore  CMakeLists.txt  conanfile.txt
cpp/include/: AssetManager.hpp  BaseModel.hpp  CSVFile.hpp  Image.hpp  ImageManager.hpp  Library.hpp  LinearModel.hpp  MLP.hpp  Neuron.hpp  Utils.hpp  stb_image.hpp
cpp/src/: AssetManager.cpp  BaseModel.cpp  CSVFile.cpp  Example.cpp  Image.cpp  ImageManager.cpp  Library.cpp  LinearModel.cpp  MLP.cpp  Neuron.cpp
cpp/test/: CMakeLists.txt
cpp/test/src/: BaseModelTest.cpp  CSVFileTest.cpp  LinearModelTest.cpp  TestCase.cpp
unity/Assets/Scenes/: GameScene.unity  SampleScene.unity
unity/Assets/Scripts/: Interface.cs  LoadLibrary.cs  NeuralNetwork.cs  UseLibrary.cs  Window_Graph.cs
